# ihavefood

./: .TODO.md  .env.example  .gitignore  .rbmq_users.sh  EventDesign.md  README.MD  README.md  TODO.MD  UML.md  compose.yaml  curl.md  design_principle.md  dngproto.sh  example_env.txt  lazycurl.sh  nginx.conf  test_mac
api/: swagger.yaml
api-gateway/: Dockerfile  cloudbuild.yaml  go.mod  go.sum  main.go
demo/: demo_coupons.json  demo_customer.json  demo_merchants.json  demo_rider.json  seed_demo.sh
gateway/: .main.go.swp  Dockerfile  README.md  genproto.sh  q  (+6 more)
src/deliveryservice/: .gitignore  Cargo.toml  Dockerfile  build.rs  cloudbuild.yaml  delivery.go  genproto.sh  main.go
src/deliveryservice/.sqlx/: query-3b5ca605ced096210012fc129f1d46a17e99154ef2cc048be11af75a1fbe1532.json  query-484c2552fb7aca498c3a6cde36c3f0b298933e0c3d08b44c53f0da6e7353f5bb.json  query-53c622032a63864d7d6722fda38c3f9db8756bdcd69da0be43cafbfb0d63156e.json  query-624bef72d3e37fd008cae42562ef4828fd83c81012e6b5f38d428f74d65a17fd.json  query-67107da50b33144dcb6a94487534447d5501c5f63ab55e877e0d42632bd20d50.json  query-97f1ac74e3fedc9cc448471cd3d014bc64426eb45f440695fe3687f586dc2c89.json  query-9adf2de2f8ce8a7b8ff17c8f15f180048d898b709610dcdbca8b4549ca59868a.json
src/deliveryservice/genproto/: authservice.pb.go  authservice_grpc.pb.go  couponservice.pb.go  couponservice.pb.gw.go  couponservice_grpc.pb.go  deliveryservice.pb.go  deliveryservice_grpc.pb.go  food.pb.go  food.pb.gw.go  food_grpc.pb.go  google.api.rs  google.protobuf.rs  grpc.gateway.protoc_gen_openapiv2.options.rs  ihavefood.rs  merchantservice.pb.go  orderservice.pb.gw.go  orderservice_grpc.pb.go  profileservice.pb.go  restaurantservice_grpc.pb.go
src/deliveryservice/internal/: delivery.go  example.go  model.go  rabbitmq.go  repository.go  storage.go
src/deliveryservice/migrations/: 001_deliveries  20250409085523_deliveries.sql
src/deliveryservice/queries/: create-delivery.sql  create-rider.sql  delivery-by-id.sql  delivery-status-by-id.sql  rider-by-id.sql  update-delivery-rider.sql  update-delivery-status.sql
src/deliveryservice/rabbitmq/: client.go
src/deliveryservice/repository/: .mongo.go.swp  mongo.go
src/deliveryservice/src/: broker.rs  database.rs  database_impl.rs  delivery.rs  delivery_impl.rs  event_impl.rs  grpc_impl.rs  main.rs  models.rs  mongo_impl.rs  rabbitmq.rs
src/deliveryservice/testdata/: place_order_success.json
(+515 files in other folders)
