[profile.dev]
# opt-level = 0 # no optimize

[package]
name = "deliveryservice"
version = "0.1.0"
edition = "2021"

[dependencies]

tonic = "0.12.3"
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"
rabbitmq-stream-client = "0.4.4"

prost = "0.13.5"
prost-types = "0.13"
prost-wkt-types = "0.6.1"
protoc-gen-tonic = { version = "0.4" }


anyhow = "1.0.97"
log = "0.4"

chrono = "0.4.40"
sqlx = { version = "0.8", features = [ "sqlite","runtime-tokio","tls-native-tls", "chrono" ] }
dotenv = "0.15.0"
lapin = "2.5.3"
futures-lite = "2.6.0"
futures = "0.3.31"
serde = "1.0.219"
serde_json = "1.0"
rand = "0.9.1"
env_logger = "0.11.8"

[build-dependencies]
tonic-build = "0.12.3"
