[profile.dev]
# opt-level = 0 # no optimize

[package]
name = "deliveryservice"
version = "0.1.0"
edition = "2021"

[dependencies]

tonic = { version = "0.12.3",features = ["transport", "tls-webpki-roots", "tls-native-roots"]}
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"
rabbitmq-stream-client = "0.4.4"

prost = "0.13.5"
prost-types = "0.13"
prost-wkt-types = "0.6.1"
protoc-gen-tonic = { version = "0.4" }

anyhow = "1.0.97"
log = "0.4"

chrono = "0.4.40"
sqlx = { version = "0.8", features = [ "sqlite","runtime-tokio","tls-native-tls", "chrono" ] }
dotenv = "0.15.0"
lapin = "2.5.3"
futures-lite = "2.6.0"
futures = "0.3.31"
serde = "1.0.219"
serde_json = "1.0"
serde_bytes = "0.11.17"
rand = "0.9.1"
env_logger = "0.11.8"
redis = { version = "0.32.5", features = ["tokio-comp"] }
r2d2 = "0.8.10"
bytes = "1"
tonic-health = "0.12.3"

[dependencies.mongodb]
version = "3.3.0"

[build-dependencies]
tonic-build = "0.12.3"
